# bot_project

./: .env  Cargo.toml  README.md
src/: main.rs
