[package]
name = "B_autobot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"  # Ensure you have the right version; update if necessary
postgres = "0.19"
supabase_rs = "0.4.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"












